--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,8 +1,10 @@
----
-title: About
-slug: "/about"
----
+- 👋 Hi, I’m @alexisrd2021
+- 👀 I’m interested in in life projects
+- 🌱 I’m currently learning in React
+- 💞️ I’m looking to collaborate on my projects
+- 📫 How to reach me https://twitter.com/alexrd2009
 
-Hi!
-
-I'm Alex, a designer turned software engineer passionate about Linux. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+<!---
+alexisrd2021/alexisrd2021 is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+You can click the Preview link to take a look at your changes.
+--->
